| Summary: | ASTERISK-28803: [patch] chan_unistim: Avoid tautological warnings with clang. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2020-04-03 12:24:24 | Date Closed: | 2020-04-07 18:16:19 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_unistim |
| Versions: | 13.32.0 16.9.0 17.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | clang 10 | Attachments: | ( 0) clang-10.patch |
| Description: | Since yesterday, Ubuntu 20.04 LTS is available as beta version. There, the compiler clang 10 gives:{code}chan_unistim.c:1354:16: warning: overlapping comparisons always evaluate to false [-Wtautological-overlap-compare]
if ((fav < 0) && (fav > 5)) { ~~~~~~~~~~^~~~~~~~~~~~ chan_unistim.c:1368:16: warning: overlapping comparisons always evaluate to false [-Wtautological-overlap-compare] if ((fav < 0) && (fav > 5)) { ~~~~~~~~~~^~~~~~~~~~~~ {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-03 12:24:24.807-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-04-07 18:16:21.391-0500 Change 14108 merged by Friendly Automation: chan_unistim: Avoid tautological warnings with clang. [https://gerrit.asterisk.org/c/asterisk/+/14108|https://gerrit.asterisk.org/c/asterisk/+/14108] By: Friendly Automation (friendly-automation) 2020-04-08 08:33:59.143-0500 Change 14110 merged by Joshua Colp: chan_unistim: Avoid tautological warnings with clang. [https://gerrit.asterisk.org/c/asterisk/+/14110|https://gerrit.asterisk.org/c/asterisk/+/14110] By: Friendly Automation (friendly-automation) 2020-04-08 08:34:13.134-0500 Change 14109 merged by Joshua Colp: chan_unistim: Avoid tautological warnings with clang. [https://gerrit.asterisk.org/c/asterisk/+/14109|https://gerrit.asterisk.org/c/asterisk/+/14109] By: Friendly Automation (friendly-automation) 2020-04-08 08:34:26.888-0500 Change 14084 merged by Joshua Colp: chan_unistim: Avoid tautological warnings with clang. [https://gerrit.asterisk.org/c/asterisk/+/14084|https://gerrit.asterisk.org/c/asterisk/+/14084] | ||