chan_unistim: Avoid tautological warnings with clang.

ASTERISK-28803

Change-Id: I15449621b68d0ad4d57b7c337c1167adb15135af